styles(ViewPage): fix gap

--- a/Client/src/scenes/ViewPage/ViewPage.module.scss
+++ b/Client/src/scenes/ViewPage/ViewPage.module.scss
@@ -28,7 +28,7 @@
   &__cards {
     display: flex;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: 2rem 0;
     justify-content: space-between;
   }
 
